--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.5'
 
     implementation 'com.google.code.gson:gson:2.8.6'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 
     implementation project(path: ':qrcodescanner')
 
